--- a/index.html
+++ b/index.html
@@ -1,47 +1,97 @@
-<script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
-<script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
-The Best Chocolate Chip Cookies
-cookies.jpg
-Recipe by: Bonnie Owens
-RELATED RECIPES
-Amazing Chocolate Chip Cookies!
-Beer and Pretzel Chocolate Chip Cookies
-Bisquick&reg; Chocolate Chip Cookies
-Browned Butter and Coconut Chocolate Chip Cookies
-Buttery Chocolate Chip Cookies
-Cherry Chocolate Chip Cookies
-PREP TIME
-45 Min
-TOTAL TIME
-45 Min
-SERVINGS
-A LOT
-INGREDIENTS
-1 and 1/2 cups (3 sticks) butter, softened
-1 cup brown sugar
-1 cup granulated sugar
-1 Tbl vanilla instant pudding powder
-2 Tbl milk
-2 Tbl vanilla extract
-2 eggs
-4 cups all-purpose flour
-2 tsp baking soda
-1/2 tsp salt
-4 cups chocolate chips
-How to Make Mama&rsquo;s Recipe: The Best Chocolate Chip Cookies
-Preheat oven to 350 degrees
-Beat butter, granulated sugar, and brown sugar together until light and fluffy
-Stir in pudding powder, milk, and vanilla extract.
-Beat in eggs.
-Add remaining dry ingredients (flour, salt, baking soda) and stir until combined.
-Stir in chocolate chips.
-Place 1.5-inch balls of dough 2 inches apart on an ungreased cookie sheet.
-Bake 8-10 minutes, or until golden brown.
-EXPERT TIPS
-Use an ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies.
-If you didn't think these cookies could get any better, think again! Get creative use with 1/2 cup each of semisweet chocolate chips, peanut butter chips or butterscotch chips instead of the 2 cups semisweet chocolate chips. OMG these are good!
-Got questions? Our experts have the answers.
-Email Us
-NUTRITION INFORMATION
-Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom
-This recipe was altered from Open Source Recipe (http://www.opensourcefood.com/people/Amanori/recipes/mamas-recipe-the-best-chocolate-chip-cookies). For more recipes, go here.
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Val's Veggies</title>
+</head>
+  <body>
+    <h1>Valerie's Veggie Shop</h1>
+
+    <h2>Welcome to Valerie's Veggie Shop!</h2>
+    <p>
+      Established in 1983, Valerie's Veggie Shop sell's only the highest quality
+      vegetables to only the highest quality people. If you didn't get
+      it at Valerie's, you're missing out.
+    </p>
+
+    <h3>Here are just some of Valerie's fine veggies</h3>
+    <ul>
+      <li>Carrots</li>
+      <li>Eggplant</li>
+      <li>Peppers</li>
+      <li>Mushrooms</li>
+      <li>Zucchini</li>
+      <li>Broccoli</li>
+    </ul>
+    <h3>Why choose Valerie's?</h3>
+    <p>
+      Soko radicchio bunya nuts gram dulse silver beet parsnip napa cabbage
+      lotus root sea lettuce brussels sprout cabbage. Catsear cauliflower
+      garbanzo yarrow salsify chicory garlic bell pepper napa cabbage lettuce
+      tomato kale arugula melon sierra leone bologi rutabaga tigernut. Sea
+      lettuce gumbo grape kale kombu cauliflower salsify kohlrabi okra sea
+      lettuce broccoli celery lotus root carrot winter purslane turnip greens
+      garlic. JÃ­cama garlic courgette coriander radicchio plantain scallion
+      cauliflower fava bean desert raisin spring onion chicory bunya nuts. Sea
+      lettuce water spinach gram fava bean leek dandelion silver beet eggplant
+      bush tomato.
+    </p>
+
+    <h3>On Valerie</h3>
+    <h4>By Maggie</h4>
+    <p>
+      Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce
+      kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus
+      winter purslane kale. Celery potato scallion desert raisin horseradish
+      spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo
+      shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea.
+       Brussels sprout coriander water chestnut gourd swiss chard wakame
+       kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts
+       nori azuki bean chickweed potato bell pepper artichoke.
+     </p>
+
+     <p>
+       Nori grape silver beet broccoli kombu beet greens fava bean potato
+       quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil
+       turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant
+       winter purslane fennel azuki bean earthnut pea sierra leone bologi leek
+       soko chicory celtuce parsley jÃ­cama salsify.
+     </p>
+
+     <p>
+       Celery quandong swiss chard chicory earthnut pea potato. Salsify taro
+       catsear garlic gram celery bitterleaf wattle seed collard greens nori.
+       Grape wattle seed kombu beetroot horseradish carrot squash brussels
+       sprout chard.
+     </p>
+     <p>
+       Pea horseradish azuki bean lettuce avocado asparagus okra. Kohlrabi
+       radish okra azuki bean corn fava bean mustard tigernut jÃ­cama green bean
+       celtuce collard greens avocado quandong fennel gumbo black-eyed pea.
+       Grape silver beet watercress potato tigernut corn groundnut. Chickweed
+       okra pea winter purslane coriander yarrow sweet pepper radish garlic
+       brussels sprout groundnut summer purslane earthnut pea tomato spring
+       onion azuki bean gourd. Gumbo kakadu plum komatsuna black-eyed pea green
+       bean zucchini gourd winter purslane silver beet rock melon radish
+       asparagus spinach.
+     </p>
+
+    <h3>Some pictures of our veggies</h3>
+    <img src="practice/assets/images/veg-1.jpg" />
+    <img src="practice/assets/images/veg-2.jpg" />
+    <img src="practice/assets/images/veg-3.jpg" />
+
+  <section>
+    <h3>Contact Us:</h3>
+    <p>Phone: 1-800-EAT-VEGS</p>
+    <a href="https://twitter.com/VeggiesRFun">Twitter</a>
+    <form>
+      <h3>Message:</h3>
+      <input name="name" placeholder="Name" />
+      <input name="phoneNumber" placeholder="phone number" />
+      <input name="email" placeholder="email" />
+      <textarea name="message" placeholder="message"> </textarea>
+    </form>
+  <section>
+  </footer>
+  </body>
+</html>
